fix visible in Firefox

--- a/css/style.scss
+++ b/css/style.scss
@@ -93,6 +93,7 @@ body {
 
   &__illustration {
     max-height: 80%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -120,6 +121,7 @@ body {
 .illustration {
   &__content {
     height: 100%;
+    width: 100%;
   }
 
   &__frame {
